# visual-behavior-asimros

./: CMakeLists.txt  README.md  package.xml
Presentacion/Presentacion_visual-behaviour/: main.tex
Presentacion/Presentacion_visual-behaviour/chapters/: Behaviour Tree.tex  Follow Ball&Person.tex  Follow Ball.tex  Follow Person.tex
behavior_trees/: CMakeLists.txt
behavior_trees/behavior_trees_xml/: tree_ball.xml  tree_person.xml
behavior_trees/include/behavior_trees/: FindBall.h  FindPerson.h  FollowPoint.h  PerciveBall.h  PercivePerson.h  Turn.h
behavior_trees/src/: nodo_behavior_tree_ball.cpp  nodo_behavior_tree_person.cpp  nodo_behavior_trees.cpp
behavior_trees/src/behavior_trees/: FindBall.cpp  FindPerson.cpp  FollowPoint.cpp  PercivedBall.cpp  PercivedPerson.cpp  Turn.cpp
behavior_trees_asimros/: CMakeLists.txt  package.xml
behavior_trees_asimros/include/behavior_trees/: FindPerson.h  FollowPoint.h
behavior_trees_asimros/src/behavior_trees/: FindBall.cpp  FindPerson.cpp  FollowPoint.cpp
behavior_trees_xml/: tree_ball.xml  tree_ball_and_person.xml  tree_both.xml  tree_person.xml
behaviour_trees_xml/: tree_ball.xml  tree_person.xml
config/: config_1.yaml
include/ball_positioning/: cloud_filter.h  image_filter.h  tf_ball.h
include/behavior_trees/: FindBall.h  FindPerson.h  FollowBall.h  FollowPerson.h  FollowPoint.h  Turn.h
include/br2_tracking/: PIDController.h  PIDController.hpp
include/visual_behaviour/: Data_tf.h
include/visual_bh/: Pos_person.h  Tfperson.h
launch/: ball_positioning.launch  calc_ball_tf.launch
src/: cloud_filter_node.cpp  follow_ball_example.cpp  follow_example.cpp  image_filter.cpp  image_filter_node.cpp  node_follow_person.cpp  node_tf_person.cpp  nodo_behavior_tree_ball.cpp  nodo_behavior_tree_ball_and_person.cpp  nodo_behavior_tree_both.cpp  nodo_behavior_tree_person.cpp  tf_ball_node.cpp
src/ball_positioning/: cloud_filter.cpp  image_filter.cpp  tf_ball.cpp
src/behavior_trees/: FindBall.cpp  FindPerson.cpp  FollowBall.cpp  FollowPerson.cpp  FollowPoint.cpp  Turn.cpp
src/br2_tracking/: PIDController.cpp
src/visual_behaviour/: Data_tf.cpp
src/visual_bh/: Pos_person.cpp  Tfperson.cpp
